--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,15 +1,98 @@
+html {
+    font-size: 12px;
+}
+body {
+    /*font-family: 'Roboto', sans-serif !important;*/
+    font-family: 'Open Sans', sans-serif;
+}
+
+table { font-size: 1rem;}
+
 #py-4 { font-size: 1.5em;}
 
-.dropdown-menu .sub-menu {
-    left: 100%;
-    position: absolute;
-    top: 0;
-    visibility: hidden;
-    margin-top: -1px;
+/* MENU --------------------------------------------- */
+
+.dropdown {
+    margin-left: 1rem;
 }
-.dropdown-menu li:hover .sub-menu {
-    visibility: visible;
+
+.nav-link {
+    color: white !important;
+    padding-left:1rem !important;
+    padding-right:2rem !important;
+    font-size: 1.1rem;
 }
+
+.nav-link:hover {
+    background-color:rgba(255,255,255,.25) !important;
+}
+
+
 .dropdown:hover .dropdown-menu {
     display: block;
 }
+
+/* -------------------------------------------------- */
+
+.abm { 
+    padding: 1.5rem 2.5rem;
+}
+
+.table_en_accordion {
+    margin: 0;
+    border-color: white;
+    vertical-align: middle;
+    width: 70%;
+}
+.table_en_accordion tbody td {
+    padding: 0 10px;
+    border-bottom-width: 0;
+    box-shadow: inset 0 0 0 0;
+}
+
+.gradient-custom {
+    /* fallback for old browsers */
+    background: #ffffff;
+  
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to bottom, rgba(255,255,255,0.5), rgba(246,247,249,0.5));
+  
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to bottom, rgba(255,255,255,0.5), rgba(226,226,226,1))
+  }
+
+  .ficha {
+    cursor: pointer;
+    background-color: white;
+  }
+
+  .ficha:hover {
+    cursor: pointer;
+    background-color: #a9e2fc;
+  }
+
+  .ficha:active {
+    background-color:#33b8f5;
+
+  }
+
+
+  /* dots ------------------------------------------------------- */
+  .spandot { width: 14px; height: 14px; margin-left: auto; margin-right: auto; border-radius: 4px;
+    display: inline-block; font-size: 10px;
+    text-align: center;
+    font-weight: bold; 
+    padding: 2px 2px 2px 2px;  margin: 5px 5px 5px 5px;}
+
+.spandotred {background-color: #f76360; border: 1px solid #EE0000; color: white;}
+.spandotora {background-color: #ff9900; border: 1px solid #994400; color: black;}
+.spandotyel {background-color: #ffff00; border: 1px solid #999900; color: black;}
+.spandotwhi {background-color: #ffffff; border: 1px solid #CCCCCC; color: black;}
+.spandotgrf {background-color: #ddff77; border: 1px solid #009900; color: #005500;}
+.spandotgre {background-color: #77ff77; border: 1px solid #009900; color: #005500;}
+.spandotdgr {background-color: #009900; border: 1px solid #009900; color: white;}
+.spandotcya {background-color: #00FFCC; border: 1px solid #ACD3EB; color: black;}
+.spandotlgr {background-color: #eeffee; border: 1px solid #889988; color: #005500;}
+.spandotgri {background-color: #eeeeee; border: 1px solid #999999; color: #777777;}
+.spandotblu {background-color: #0d6efd; border: 1px solid #0d6efd; color: white;}
+.spandotlil {background-color: #0d6efd; border: 1px solid #0d6efd; color: white;}
